# R-Type

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile.build  Dockerfile.server  Dockerfile.test  README.md  api.md  api2.md  conanfile.py  conanfile.txt  config.json  docker-compose.yml  graph.html  r-type_client  r-type_server  requirements.txt  rfc4242.txt  server_macos  todo.txt
.github/workflows/: build-with-docker.yml  clang-formatter.yml  cmake-multi-platform.yml
Client/: Entity.cpp  Entity.hpp  EventHandler.cpp  EventHandler.hpp  Game.cpp  Game.hpp  Login.hpp  Parser.hpp  RessourceManager.cpp  RessourceManager.hpp  TCPClient.cpp  TCPClient.hpp  TCPClientConnection.cpp  TCPClientConnection.hpp  TCPClientImpl.hpp  TCPConnection.hpp  ThreadPool.cpp  ThreadSafeQueue.hpp  include.hpp  main.cpp  parser.cpp  startGame.cpp
config/pong/: pongConfig.json  pongInstanceConfig.json  pongLevels.json  pongSetup.json
config/r-type/: rTypeAnimationConfig.json  rTypeConfig.json  rTypeInstanceConfig.json  rTypeLevels.json  rTypeSetup.json
config/r-type/cenarion/: Wall1.rType.json  Wall2.rType.json  Wall3.rType.json
config/r-type/enemies/: Bomberman.rType.json  Boss1.rType.json  Boss2.rType.json  CircularRobot.rType.json  Flyer.rType.json  GreenRobot.rType.json  Worm.rType.json
config/r-type/engine/: rTypeConfig.json  rTypeLevels.json  rTypeSetup.json
config/r-type/engine/enemies/: Flyer.rType.json  OrangeRobot.rType.json
config/r-type/support/: Dropper.rType.json  SupportShip.rType.json
docs/: api.md  api2.md  client.md  engine.md  installation.md  rfc4242.txt  server.md
src/: IEntity.hpp  Player.cpp  Player.hpp  Server.cpp  Server.hpp  Socket.cpp  main.cpp
src/GameEngine/: AEntity.cpp  AEntity.hpp  Character.cpp  Character.hpp  Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  EntityType.cpp  EntityType.hpp  Game.cpp  Game.hpp  IEntity.hpp  JsonParser.cpp  JsonParser.hpp  Protocol.cpp  Protocol.hpp  StaticObject.cpp  StaticObject.hpp  WindowConfig.json
src/GameEngine/r-type/: Classic.cpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  Projectile.cpp  Projectile.hpp  Shield.cpp  Shield.hpp  Shoot.cpp  Shoot.hpp  Shooter copy.cpp  Shooter.cpp  Shooter.hpp  Speed.cpp  Speed.hpp  Tank.cpp  Tank.hpp
src/GameEngine/r-type/assets/: Setup.json
src/GameEngine/r-type/assets/data/: Levels.json  Setup.json  Sprites.json  rTypeLevels.json  rTypeSetup.json
src/client/: CMakeLists.txt  DisplaySFML.cpp  DisplaySFML.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  IDisplay.hpp  IEntity.hpp  Input.cpp  Input.hpp  InstanceButton.cpp  InstanceButton.hpp  InstanceMenu.cpp  InstanceMenu.hpp  JsonParser.cpp  JsonParser.hpp  Login.hpp  Menu.cpp  Menu.hpp  Messages.hpp  Parser.hpp  ProgressBar.cpp  ProgressBar.hpp  RessourceManager.cpp  RessourceManager.hpp  TCPClient.hpp  TCPClientImpl.cpp  TCPClientImpl.hpp  TCPConnection.hpp  ThreadPool.hpp  ThreadSafeQueue.hpp  UDPClient.cpp  UDPClient.hpp  main.cpp  parser.cpp  startGame.cpp
src/client/SDL/: Camera.hpp  DisplaySDL.cpp  DisplaySDL.hpp  EntitySDL.cpp  EntitySDL.hpp  RessourceManagerSDL.cpp  RessourceManagerSDL.hpp
src/client/SFML/: DisplaySFML.cpp  DisplaySFML.hpp  Entity.cpp  Entity.hpp  EntitySFML.cpp  EntitySFML.hpp  RessourceManager.cpp  RessourceManager.hpp  RessourceManagerSFML.cpp  RessourceManagerSFML.hpp
src/client/SFML/r-type_map_editor/: Editor.cpp  Editor.hpp
src/editor/: CMakeLists.txt  Editor.cpp  Editor.hpp  main.cpp
src/engine/: AEntity.cpp  AEntity.hpp  Character.cpp  Character.hpp  Core.cpp  Core.hpp  Engine.cpp  Engine.hpp  EntityType.cpp  EntityType.hpp  IEntity.hpp  IGame.hpp  JsonParser.cpp  Protocol.cpp  Protocol.hpp  StaticObject.cpp  StaticObject.hpp  WindowConfig.json
src/engine/pong/: Ball.cpp  Ball.hpp  Player.cpp  Player.hpp  Pong.cpp  Pong.hpp  PongInitializer.cpp  PongInitializer.hpp
src/engine/r-type/: Boss.cpp  Boss.hpp  Classic.cpp  Classic.hpp  Dropper.cpp  Dropper.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  LevelInitializer.cpp  LevelInitializer.hpp  Projectile.cpp  Projectile.hpp  RType.cpp  RType.hpp  Shield.cpp  Shield.hpp  Shooter.cpp  Shooter.hpp  Speed.cpp  Speed.hpp  SupportShip.cpp  SupportShip.hpp  Tank.cpp  Tank.hpp  Wall.cpp  Wall.hpp
src/engine/r-type/Map Editor/: editor.cpp  editor.hpp
src/engine/r-type/assets/data/: rTypeLevels.json
src/engine/r-type/map_editor/: Editor.hpp
src/global/: DataCompress.hpp  EventHandler.cpp  EventHandler.hpp  JsonParser.cpp  JsonParser.hpp  StructsMessages.hpp  TCPEventHandler.cpp  TCPEventHandler.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  serialize_tuple.h
src/jsonEditor/: main copy.py  main.py
src/server/: CMakeLists.txt  EventHandler.cpp  EventHandler.hpp  IMutex.hpp  Instance.cpp  Instance.hpp  Messages.hpp  Mutex.cpp  Mutex.hpp  Server.cpp  Server.hpp  ServerClass.cpp  ServerClass.hpp  ServerImpl.hpp  Socket.cpp  Socket.hpp  TCPClient.cpp  TCPClient.hpp  TCPClientConnection.cpp  TCPClientConnection.hpp  TCPConnection.cpp  TCPConnection.hpp  TCPServer.cpp  TCPServer.hpp  TCPServerConnection.cpp  TCPServerConnection.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp
src/tests/: CMakeLists.txt  Connection.cpp  main.cpp
src/types/: Instance.hpp
